modified instance creation